--- a/runningmate/mateapp/templates/mateapp/create_schedule.html
+++ b/runningmate/mateapp/templates/mateapp/create_schedule.html
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="today_content">
-                <input type="date" id="ipt1" name="date_picker" data-placeholer=" 우측 아이콘 클릭하여 날짜를 입력해주세요" required aria-required="true"><br><br>
+                <input type="date" id="ipt1" name="endday" data-placeholer=" 우측 아이콘 클릭하여 날짜를 입력해주세요" required aria-required="true"><br><br>
                 <input type="time" id="ipt2" name="starttime">~<input type="time" id="ipt2" name="endtime"><br><br>
                 <input type="title" id="ipt3" name="title" placeholder="  과목명을 입력해주세요"><br><br>
                 <input type="place" id="ipt5" name="place" placeholder="  장소를 입력해주세요"><br><br>
