navbar 살짝 수정,충돌 삭제 안한거 수정, css 이것저것 살짝 수정

--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -35,7 +35,7 @@
     width: 30px;
     height: 30px;
     /* background: #735BF2; */
-    background-image: url("{% static 'images/calenderOn.png' %}");
+    background-image: url("{% static 'images/CalenderOn.png' %}");
     background-repeat: no-repeat;
     display: inline-block;
     margin-left: 10px;
@@ -55,7 +55,7 @@
   <div class="container2">
     <div class="item2" id="chart_text">러닝차트</div>
 
-    <div class="item2" id="gantt">
+    <div class="item2" id="gantt" style="margin-left: 20px;">
       <div class="chart-axis">
         <ul class="chart-subject">
             {% for calendar in calendars %}
