--- a/runningmate/runningmate/static/css/calender.css
+++ b/runningmate/runningmate/static/css/calender.css
@@ -24,7 +24,7 @@
     grid-row : 2 / 3;
     background-color: #FFFFFF;
     border-radius: 20px;
-    margin-left:20px;
+    margin-left:2em;
     margin-right: 2em;
 
 }
