--- a/runningmate/runningmate/templates/shared/_navbar.html
+++ b/runningmate/runningmate/templates/shared/_navbar.html
@@ -9,10 +9,10 @@
     <div class="button_wrap">
         <a href="{% url 'mateapp:showmain' %}"><div class="nav_button" id="btn1"><div id="home_logo"></div> <span>대시보드</span></div></a>
         <a href="{% url 'mateapp:calendar' %}"><div class="nav_button" id="btn2"><div id="calender_logo"></div> <span>캘린더</span></div></a>
-        <a href="#"><div class="nav_button" id="btn3"><div id="project_logo"></div> <span>프로젝트</span></div></a>
+        <div class="nav_button" id="btn3"><div id="project_logo"></div> <span>프로젝트</span></div>
         <ul class="project_wrap">
             {% for project in projects %}
-            <a href = "{% url 'mateapp:project_detail' project.id %}"><li id = "{{project.id}}">{{project.title}}</li></a>
+                <a href = "{% url 'mateapp:project_detail' project.id %}"><li id = "{{project.id}}">{{project.title}}</li></a>
             {% endfor %}
         </ul>
     </div>
