0709 오류 없애기

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -158,7 +158,7 @@
         </div>
         <div class = "item" id = "project">
             <!-- 프로젝트 아무것도 없는 경우 -->
-            <!-- <div class="scroll--element" id = "subject1" style="background-color: white;">
+            <div class="scroll--element" id = "subject1" style="background-color: white;">
                 <div id = "no_project_name">
                     <p style="margin-bottom: 0;">어떤 과목에서 팀 프로젝트가 진행되나요?</p>
                     <p style="margin-bottom: 0;">+ 버튼을 눌러 </p>
@@ -186,10 +186,10 @@
                     <p style="visibility: hidden;margin-bottom: 0;">이유는 모르겠는데 내용이 안들어가 있으면 정렬이 이상해져서 올립니다. </p>
                     <p style="visibility: hidden;margin-bottom: 0;">이유는 모르겠는데 내용이 안들어가 있으면 정렬이 이상해져서 올립니다. </p>
                 </div>
-            </div> -->
+            </div>
            
             <!-- 프로젝트 있는 경우 -->
-            <div class="scroll--element" id = "subject1">
+            <!-- <div class="scroll--element" id = "subject1">
                 <h6>{{ project.startday }} {{ project.endday }}</h6>
                 <h2>{{ project.title }}</h2>
                 <h3>{{ project.body }}</h3>
@@ -218,7 +218,7 @@
                 <h6>{{ project.4.startday }} {{ project.4.endday }}</h6>
                 <h2>{{ project.4.title }}</h2>
                 <h3>{{ project.4.body }}</h3>
-            </div>
+            </div> -->
         </div> 
         <div class = "item" id = "project">
 
