0710 프로젝트 페이지 오류 + 프로젝트 관리 오류 해결

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -176,6 +176,17 @@
                     <h1>{{project.title}}</h1>
                 {% endfor %}-->
             <!-- 프로젝트 아무것도 없는 경우 -->
+            {% if projects %}
+            {% for project in projects %}
+            <div class="scroll--element" id = "subject1" style="background-color: white;">
+                <div id = "{{project.id}}">
+                        <h2>{{project.title}}</h2>
+                        <h6>{{project.startday}}~{{project.endday}}</h6>
+                        <h3>{{project.summary}}</h3>
+                </div>
+            </div>
+            {% endfor %}
+            {% else %}
             <div class="scroll--element" id = "subject1" style="background-color: white;">
                 <div id = "no_project_name">
                     <p style="margin-bottom: 0;">어떤 과목에서 팀 프로젝트가 진행되나요?</p>
@@ -205,6 +216,7 @@
                     <p style="visibility: hidden;margin-bottom: 0;">이유는 모르겠는데 내용이 안들어가 있으면 정렬이 이상해져서 올립니다. </p>
                 </div>
             </div>
+            {% endif %}
            
             <!-- 프로젝트 있는 경우 -->
             <!-- <div class="scroll--element" id = "subject1">
@@ -237,9 +249,9 @@
 
         
         <!--test용 코드입니다-->
-        <!--<div class = "item" id = "project"> 
+        <!-- <div class = "item" id = "project"> 
 
-            {% for project in project_object %}
+            {% for project in projects %}
             <div class = "item" id = "project">
                 <div class="scroll--element" id = "subject1">
                         <h2>{{project.title}}</h2>
@@ -249,7 +261,7 @@
             </div>
             {% endfor %}
 
-        </div>-->
+        </div> -->
 
     </div>
 </div>
