--- a/runningmate/addproject/templates/addproject/newproject.html
+++ b/runningmate/addproject/templates/addproject/newproject.html
@@ -68,11 +68,11 @@
                     <input type="text" id="it5" name="teammate5" placeholder=" 팀원의 아이디를 입력해주세요"><br><br>
                     <input type="text" id="it5" name="teammate6" placeholder=" 팀원의 아이디를 입력해주세요"><br><br>
                     <div id = "color_select">
-                        <button id="btn_1" onclick=""><input type="color" id="pj_color1" value="#fe7782" onclick=""></button>
-                        <button id="btn_2" onclick=""><input type="color" id="pj_color2" value="#ffbc54" onclick=""></button>
-                        <button id="btn_3" onclick=""><input type="color" id="pj_color3" value="#50cfbc" onclick=""></button>
-                        <button id="btn_4" onclick=""><input type="color" id="pj_color4" value="#45bfff" onclick=""></button>
-                        <button id="btn_5" onclick=""><input type="color" id="pj_color5" value="#735bf2" onclick=""></button>
+                        <label><input type="radio" name="color" id="pj_color1" value="#fe7782" onclick=""></label>
+                        <label><input type="radio" name="color" id="pj_color2" value="#ffbc54" onclick=""></label>
+                        <label><input type="radio" name="color" id="pj_color3" value="#50cfbc" onclick=""></label>
+                        <label><input type="radio" name="color" id="pj_color4" value="#45bfff" onclick=""></label>
+                        <label><input type="radio" name="color" id="pj_color5" value="#735bf2" onclick=""></label>
                     </div>
                 </div>
             </div>
