--- a/runningmate/mateapp/templates/mateapp/project_post.html
+++ b/runningmate/mateapp/templates/mateapp/project_post.html
@@ -37,34 +37,80 @@
     display: inline-block;
     padding-right: 10px;
     }
+
+     /*색 css*/
+     #post_title{
+    color:{{project.color}};
+
+    }
+
+    #title_input input::-webkit-input-placeholder{
+        color:{{project.color}};
+    }
+    input:focus{
+        outline: none;
+        color:{{project.color}};
+    }
+
+    #title_input input::placeholder{
+        color:{{project.color}};
+    }
+    
+    #submit_title2{ 
+        background: {{project.color}};
+        border: none;
+    }
+
+    #meeting_date{
+        color: {{project.color}};
+    }
 </style>
 
 <div id = "rec3">
     <div class = "container3">
         
         <div class = "item3" id = "pro_project_text">프로젝트</div>
-        <div class = "item3" id = "pro_project"></div>
+        <div class = "item3" id = "pro_project" style="background-color: {{project.color}};">
+            <div id = "{{project.id}}">
+                    <h6>{{project.startday}}~{{project.endday}}</h6>
+                    <h2>{{project.title}}</h2>
+                    <h3>{{project.summary}}</h3>
+            </div>
+        </div>
         <div class = "item3" id = "pro_runningmate_text">러닝메이트</div>
         <div class = "item3" id = "pro_runningmate"></div>
         <div class = "item3" id = "pro_runningspace_text">
             <span>러닝스페이스</span>
-            <section id = "plus2">+</section>
+            <a href = "{% url 'mateapp:project_detail' project.id %}"><section id = "back" style="display:inline-block; font-size:15px;color:white;background-color: {{project.color}};width: 81px;
+            height: 32px;">목록으로</section></a>
         </div>
+        <div class = "item3" id = "pro_runningspace">
+                <section id = "post_date">{{post.day}}</section>
+                <section id = "post_title">{{post.title}}</section>
+ 
         <form action="{% url 'mateapp:create_comment' project.id post.id %}" method="POST" enctype="multipart/form-data">
             {%csrf_token%}
-            <label for="content">코멘트</label>
-            <input type="text" name="content" id='content' required placeholder="댓글 입력">
-            <input type="submit" value="등록">
+            <div style="width: 100%;text-align:center;margin-top: 35vmin;">
+                
+                <input type="text" name="content" id='content' required placeholder="  내용을 입력해주세요" style="width: 80%;">
+                <input type="submit" value="전송" id = "submit_title2" >
+            </div>
         </form>
-        <div class = "item3" id = "{{post.id}}">
-            {{post.day}}
-            {{post.title}}
-        </div>
+    </div>
+
         {% for comment in boards %}
         <div class = "item3" id = "{{comment.id}}">
-            {{comment.day}}
+            <div id = "mimoji_place" >
+                <section id = "mimoji" style="width: 70px; height:70px; border-radius: 50%; background:{{project.color}}; ;margin:10px;">
+                    
+                </section>
+            </div>
+            <section id = "name" style="color:{{project.color}}">{{comment.user}}</section>
+            <section id = "comment_title">{{comment.content}}</section>
+            <section id = "comment_date">{{comment.day}}</section>
+            
             <br>
-            {{comment.content}}
+            
         </div>
         {% endfor %}
         <!--밑에 버튼-->
@@ -74,31 +120,30 @@
                     <ul class = "pagination justify-content-center">
                         {% if boards.has_previous %}
                             <li class = "page-item">
-                                <a class = "page-link" href = "?p={{boards.previous_page_number}}">이전</a>
+                                <a class = "page-link" href = "?p={{boards.previous_page_number}}">&lt;</a>
                             </li>
                         {% else %}
                             <li class = "page-item disabled">
-                                <a class = "page-link disabled" href = "#">이전</a>
+                                <a class = "page-link disabled" href = "#">&lt;</a>
                             </li>
                         {% endif %}
         
                         <li class = "page-item active">
-                            <a class = "page-link" style="background: #e32879; border: none;">{{boards.number}}/{{boards.paginator.num_pages}}</a>
+                            <a class = "page-link"border: none;>{{boards.number}}/{{boards.paginator.num_pages}}</a>
                         </li>
         
                         {% if boards.has_next %}
                             <li class = "page-item">
-                                <a class = "page-link" href = "?p={{boards.next_page_number}}">다음</a>
+                                <a class = "page-link" href = "?p={{boards.next_page_number}}">&gt</a>
                             </li>
                         {% else %}
                             <li class = "page-item disabled">
-                                <a class = "page-link disabled" href = "#">다음</a>
+                                <a class = "page-link disabled" href = "#">&gt</a>
                             </li>
                         {% endif %}
                     </ul>
                 </nav>
             </div>
-        </div>
         <!-- <form action="{% url 'mateapp:create_post' project.id %}" method="POST" enctype="multipart/form-data">
             {%csrf_token%}
             <label for="title">주제</label>
