--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -205,7 +205,7 @@ span{
 }
 
 
-.scroll--element>h6{
+.scroll--element h6{
     color: white;
     margin-left: 2vmin;
     font-family: AppleSDGothicNeoL;
@@ -214,7 +214,7 @@ span{
     margin-bottom: 0;
     font-size: 1.6vmin;
 }
-.scroll--element>h2{
+.scroll--element h2{
     color: white;
     margin: 0;
     margin-left: 0.5em;
@@ -228,7 +228,7 @@ span{
     font-size: 3.8vmin;
 }
 
-.scroll--element>h3{
+.scroll--element h3{
     color: white;
     margin-left: 1vmin;
     font-family:AppleSDGothicNeoM;
