--- a/runningmate/mateapp/templates/mateapp/create_schedule.html
+++ b/runningmate/mateapp/templates/mateapp/create_schedule.html
@@ -60,7 +60,8 @@
         {%csrf_token%}
             <div class="today_wrap">
                 <div class="today_title">
-                    <span>날짜</span><br><br>
+                    <span>시작일</span><br><br>
+                    <span>마감일</span><br><br>
                     <span>시간</span><br><br>
                     <span>과목명</span><br><br>
                     <span>장소</span><br><br>
@@ -68,7 +69,9 @@
                 </div>
 
                 <div class="today_content">
-                <input type="date" id="ipt1" name="endday" data-placeholer=" 우측 아이콘 클릭하여 날짜를 입력해주세요" required aria-required="true"><br><br>
+                    <!-- startday 추가 id 값 변경 해야함 -->
+                <input type="date" id="ipt0" name="startday" data-placeholer=" 우측 아이콘 클릭하여 날짜를 입력해주세요" required><br><br>
+                <input type="date" id="ipt1" name="endday" data-placeholer=" 우측 아이콘 클릭하여 날짜를 입력해주세요" required ><br><br>
                 <input type="time" id="ipt2" name="starttime">~<input type="time" id="ipt2" name="endtime"><br><br>
                 <input type="title" id="ipt3" name="title" placeholder="  과목명을 입력해주세요"><br><br>
                 <input type="place" id="ipt5" name="place" placeholder="  장소를 입력해주세요"><br><br>
