--- a/runningmate/mateapp/templates/mateapp/project_post.html
+++ b/runningmate/mateapp/templates/mateapp/project_post.html
@@ -20,7 +20,7 @@
     padding-right: 10px;
     }
 
-    #calender_logo {
+    #emer_logo {
     width: 30px;
     height: 30px;
     background-image: url("{% static 'images/calender.png' %}");
