시간표 파일선택후 바로 등록할 수 있도록

--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -80,7 +80,7 @@
           {% for schedule in schedules %}
           {% if schedule.title == calendar.title %}
 
-          <li data-duration= "{{ schedule.startday|date:'w' }}-{{ schedule.endday|date:'w' }}" data-color="{{calendar.color}}">{{schedule.title}}</li>
+          <li data-duration= "{{ schedule.startday|date:'w' }}-{{ schedule.endday|date:'w' }}" data-color="{{calendar.color}}">ㅇㄴㅁㅇ</li>
           {% endif %}
           {% endfor %}
           {% endfor %}
