0710 미모지 임시

--- a/runningmate/runningmate/static/css/project.css
+++ b/runningmate/runningmate/static/css/project.css
@@ -382,3 +382,11 @@ a{
     font-family: 'AppleSDGothicNeoB';
 
 }
+
+h4{
+    text-align:center; 
+    margin: 0;
+    font-family: 'AppleSDGothicNeoM';
+    font-weight: 500;
+    font-size: 1.8vmin;
+}
