--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -32,6 +32,8 @@
     display: inline-block;
     padding-right: 10px;
     }
+
+
 </style>
 
 <div id = "rec3">
@@ -128,17 +130,15 @@
             {% for project in projects %} 
 
             {%empty%}
-                <div id = "no_project">아직 등록된 프로젝트가 없어요.</div>
+                <div id = "no_project">아직 등록된 러닝메이트가 없어요.</div>
             {%endfor%}
-            <div id = "no_runningmate">아직 등록된 러닝메이트가 없어요.</div>
 
-             <!-- 있으면 러닝메이트 띄움 -->
-            <!-- <div id = "f1" style="margin-left: 3vmin;"><div class = "friend" id = "friend1"></div><h4>이영서</h4></div>
+            <div id = "f1" style="margin-left: 3vmin;"><div class = "friend" id = "friend1"></div><h4>이영서</h4></div>
             <div id = "f2"><div class = "friend" id = "friend2"></div><h4>오준서</h4></div>
             <div id = "f3"><div class = "friend" id = "friend3"></div><h4>윤영서</h4></div>
             <div id = "f4"><div class = "friend" id = "friend4"></div><h4>김성준</h4></div>
             <div id = "f5"><div class = "friend" id = "friend5"></div><h4>류슬기</h4></div>
-            <div id = "f6"><div class = "friend" id = "friend6"></div><h4>이예나</h4></div> -->
+            <div id = "f6"><div class = "friend" id = "friend6"></div><h4>이예나</h4></div>
 
         </div>
 
@@ -147,12 +147,37 @@
         <div class = "item" id = "chatting_text">최근 프로젝트</div>
         <div class = "item" id = "chatting_1">
             {% for project in projects %} 
-
+             
             {%empty%}
                 <div id = "no_project">아직 등록된 프로젝트가 없어요.</div>
             {%endfor%}
             <section id = "recentpro_title" style="color:{{projects.0.color}}">{{projects.0.title}}</section>
-            
+            <!-- {% for project in projects %}
+                {% for post in boards %}
+                    {% if project.title == post.project %}
+                        post.comments
+                    {%endif%}
+                 {% endfor%}  
+            {% endfor %} -->
+            <!-- {% for calendar in calendars %}
+            <section class="calendar_wrap" style="width:100% ;">
+                <div id = "checkbox_title"style="color:{{calendar.color}}; float:left; width:35%">{{calendar.title}}</div>
+                {% for schedules in schedules_list %}
+                {% for schedule in schedules %}
+                {% if schedule.title == calendar.title %}
+                <div class="calendar_content" style="float:right; width:65%">
+                <div class="calendar_cb">
+                    <input type="checkbox" class="cb" id="cb3" style="color: {{calendar.color}};">
+                </div>
+                <div class="calendar_body">
+                    <span id="marg_text" style="width:100% ;">{{calendar.body}}</span>
+                </div>
+                </div>
+                {% endif %}
+                {% endfor %}
+                {% endfor %}
+            </section>
+            {% endfor %} -->
         </div>
         <div class = "item" id = "chatting_2">
             <section id = "recentpro_title" style="color:{{projects.1.color}}">{{projects.1.title}}</section>
