--- a/runningmate/mateapp/templates/mateapp/project.html
+++ b/runningmate/mateapp/templates/mateapp/project.html
@@ -65,6 +65,10 @@
     #meeting_date{
         color: {{project.color}};
     }
+
+    #friend1, #friend2, #friend3, #friend4,#friend5, #friend6{
+        background-color:  {{project.color}};;
+    }
 </style>
 <div id = "rec3">
     <div class = "container3">
@@ -76,8 +80,20 @@
                         <h3>{{project.summary}}</h3>
                 </div>
         </div>
-        <div class = "item3" id = "pro_runningmate_text">러닝메이트</div>
-        <div class = "item3" id = "pro_runningmate"></div>
+        <div class = "item3" id = "pro_runningmate_text">러닝메이트
+
+        </div>
+        <div class = "item3" id = "pro_runningmate">
+            
+            <div id = "f1" style="margin-left: 3vmin;">
+            <div class = "friend" id = "friend1" ></div><h4>이영서</h4></div>
+            <div id = "f2"><div class = "friend" id = "friend2"></div><h4>오준서</h4></div>
+            <div id = "f3"><div class = "friend" id = "friend3"></div><h4>윤영서</h4></div>
+            <div id = "f4"><div class = "friend" id = "friend4"></div><h4>김성준</h4></div>
+            <div id = "f5"><div class = "friend" id = "friend5"></div><h4>류슬기</h4></div>
+            <div id = "f6"><div class = "friend" id = "friend6"></div><h4>이예나</h4></div>
+            
+        </div>
         <div class = "item3" id = "pro_runningspace_text">
             <span>러닝스페이스</span>
 
