간트 에러 수정

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -139,7 +139,9 @@
 
 
 
-        <div class = "item" id = "chatting_text">최근 프로젝트</div>
+        <div class = "item" id = "chatting_text">최근 프로젝트
+            {{ profile.profile }}
+        </div>
         <div class = "item" id = "chatting_1">
             <div id = "no_project">아직 등록된 프로젝트가 없어요.</div>
         </div>
