프로젝트 관리 라디오 박스 css 추가

--- a/runningmate/addproject/templates/addproject/newproject.html
+++ b/runningmate/addproject/templates/addproject/newproject.html
@@ -6,7 +6,7 @@
         background-color: #735BF2;
         color: white;
     }
-  
+
     #home_logo {
     width: 30px;
     height: 30px;
@@ -68,11 +68,11 @@
                     <input type="text" id="it5" name="teammate5" placeholder=" 팀원의 아이디를 입력해주세요"><br><br>
                     <input type="text" id="it5" name="teammate6" placeholder=" 팀원의 아이디를 입력해주세요"><br><br>
                     <div id = "color_select">
-                        <label><input type="radio" name="color" id="pj_color1" value="#fe7782" onclick=""></label>
-                        <label><input type="radio" name="color" id="pj_color2" value="#ffbc54" onclick=""></label>
-                        <label><input type="radio" name="color" id="pj_color3" value="#50cfbc" onclick=""></label>
-                        <label><input type="radio" name="color" id="pj_color4" value="#45bfff" onclick=""></label>
-                        <label><input type="radio" name="color" id="pj_color5" value="#735bf2" onclick=""></label>
+                        <label for="cl1"><input type="radio" name="color" id="cl1" value="#fe7782" onclick=""></label>
+                        <label for="cl2"><input type="radio" name="color" id="cl2" value="#ffbc54" onclick=""></label>
+                        <label for="cl3"><input type="radio" name="color" id="cl3" value="#50cfbc" onclick=""></label>
+                        <label for="cl4"><input type="radio" name="color" id="cl4" value="#45bfff" onclick=""></label>
+                        <label for="cl5"><input type="radio" name="color" id="cl5" value="#735bf2" onclick=""></label>
                     </div>
                 </div>
             </div>
